Fixed MAGE-5355: [SAASMERGE] SAASDEV-1874 Apply Coupone Code textbox doesn't fit in the Apply Coupone Code channel on the backend after reducing the browser window

--- a/skin/adminhtml/default/enterprise/boxes.css
+++ b/skin/adminhtml/default/enterprise/boxes.css
@@ -356,6 +356,7 @@ table.form-edit                         { width:100%; }
 label.inline                            { float:none !important; width:auto !important; }
 .nested-content .entry-edit             { margin-left:2em; }
 .nested-content .entry-edit .entry-edit { margin-left:0; }
+#coupon_container .entry-edit { min-width:310px; }
 
 /* Form Elements */
 input.input-text,textarea,select { border-width:1px; border-style:solid; border-color:#aaa #c8c8c8 #c8c8c8 #aaa; background:#fff; font:12px arial, helvetica, sans-serif; }
